--- a/style.css
+++ b/style.css
@@ -2,6 +2,36 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  display: center;
 }
 
+h1{
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
+}
+nav,
+figcaption {
+  text-align: center;
+}
+
+nav a {
+  padding: 0 10px;
+  background-color: grey;
+  margin: 0 auto;
+}
+
+#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+#details div{
+  float: left;
+  background-color: red;
+  width: 25%;
+  text-align: center;
+}
